Project ECUBE {
  database_type: "PostgreSQL"
  Note: "ECUBE core operational schema (generated from SQLAlchemy metadata)"
}

Enum mount_type {
  NFS
  SMB
}

Enum mount_status {
  MOUNTED
  UNMOUNTED
  ERROR
}

Enum ecube_role {
  admin
  manager
  processor
  auditor
}

Enum job_status {
  PENDING
  PREPARING
  RUNNING
  PAUSING
  PAUSED
  COMPLETED
  FAILED
  VERIFYING
  ARCHIVED
}

Enum startup_analysis_status {
  NOT_ANALYZED
  ANALYZING
  READY
  STALE
  FAILED
}

Enum drive_state {
  DISCONNECTED
  DISABLED
  AVAILABLE
  IN_USE
}

Enum drive_format_status {
  PENDING
  FAILED
}

Enum file_status {
  PENDING
  COPYING
  DONE
  ERROR
  RETRYING
  TIMEOUT
}

Table network_mounts {
  id int [pk, not null]
  type mount_type [not null]
  remote_path varchar [not null]
  project_id varchar [not null, default: 'UNASSIGNED']
  nfs_client_version varchar
  local_mount_point varchar [not null, unique]
  encrypted_username varchar
  encrypted_password varchar
  encrypted_credentials_file varchar
  status mount_status [default: 'UNMOUNTED']
  last_checked_at timestamptz
  throughput_read_mbps float
  throughput_tested_at timestamptz

  indexes {
    project_id [name: 'ix_network_mounts_project_id']
    status [name: 'ix_network_mounts_status']
    (status, project_id) [name: 'ix_network_mounts_status_project']
  }
}

Table projects {
  id int [pk, not null]
  normalized_project_id varchar [not null, unique]
  created_at timestamptz [not null]
}

Table reconciliation_lock {
  id int [pk, not null, default: 1]
  locked_by varchar [not null]
  locked_at timestamptz [not null]
}

Table system_initialization {
  id int [pk, not null, default: 1]
  initialized_by varchar [not null]
  initialized_at timestamptz [not null]
}

Table usb_hubs {
  id int [pk, not null]
  name varchar [not null]
  system_identifier varchar [not null, unique]
  location_hint varchar
  vendor_id varchar
  product_id varchar
}

Table user_roles {
  id int [pk, not null]
  username varchar [not null]
  role ecube_role [not null]

  indexes {
    (username, role) [unique, name: 'uq_user_role']
    username [name: 'ix_user_roles_username']
  }
}

Table export_jobs {
  id int [pk, not null]
  project_id varchar [not null]
  evidence_number varchar [not null]
  source_path varchar [not null]
  target_mount_path varchar
  status job_status [default: 'PENDING']
  total_bytes bigint [default: 0]
  copied_bytes bigint [default: 0]
  file_count int [default: 0]
  thread_count int
  copy_chunk_size_bytes int
  copy_progress_flush_bytes bigint
  copy_file_fsync_enabled boolean
  startup_analysis_auto_apply_recommended_profile boolean [not null, default: false]
  max_file_retries int [default: 3]
  retry_delay_seconds int [default: 1]
  active_duration_seconds int [not null, default: 0]
  started_at timestamptz
  copy_started_at timestamptz
  completed_at timestamptz
  created_by varchar
  started_by varchar
  client_ip varchar(45)
  callback_url varchar
  failure_reason text
  startup_analysis_status startup_analysis_status [not null, default: 'NOT_ANALYZED']
  startup_analysis_last_analyzed_at timestamptz
  startup_analysis_failure_reason text
  startup_analysis_file_count int
  startup_analysis_total_bytes bigint
  startup_analysis_share_read_mbps float
  startup_analysis_drive_write_mbps float
  startup_analysis_estimated_duration_seconds int
  startup_analysis_cache_present boolean [not null, default: false]
  startup_analysis_revision int [not null, default: 0]
  startup_analysis_entries json
  created_at timestamptz

  indexes {
    (created_at, id) [name: 'ix_export_jobs_created_id']
    project_id [name: 'ix_export_jobs_project_id']
    (status, created_at, id) [name: 'ix_export_jobs_status_created_id']
  }
}

Table usb_ports {
  id int [pk, not null]
  hub_id int [not null]
  port_number int [not null]
  system_path varchar [not null]
  friendly_label varchar
  enabled boolean [not null, default: false]
  vendor_id varchar
  product_id varchar
  speed varchar

  indexes {
    system_path [unique, name: 'uq_usb_ports_system_path']
  }
}

Table job_chain_of_custody_snapshots {
  id int [pk, not null]
  job_id int [not null, unique]
  payload json [not null]
  stored_by varchar
  stored_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    job_id [unique, name: 'ix_job_chain_of_custody_snapshots_job_id']
  }
}

Table startup_analysis_entries {
  id int [pk, not null]
  job_id int [not null]
  entry_type varchar [not null]
  relative_path varchar [not null]
  size_bytes bigint
  mtime_ns bigint
  created_at timestamptz [not null]

  indexes {
    (job_id, entry_type, relative_path) [unique, name: 'ix_startup_analysis_entries_job_entry_path']
    job_id [name: 'ix_startup_analysis_entries_job_id']
  }
}

Table usb_drives {
  id int [pk, not null]
  port_id int
  device_identifier varchar [not null, unique]
  manufacturer varchar
  product_name varchar
  filesystem_path varchar
  capacity_bytes bigint
  available_bytes bigint
  encryption_status varchar
  filesystem_type varchar
  current_state drive_state [default: 'AVAILABLE']
  current_project_id varchar
  mount_path varchar
  throughput_write_mbps float
  throughput_tested_at timestamptz
  format_status drive_format_status
  format_failure_message varchar
  format_started_at timestamptz
  format_finished_at timestamptz
  last_seen_at timestamptz

  indexes {
    current_project_id [name: 'ix_usb_drives_current_project_id']
    current_state [name: 'ix_usb_drives_current_state']
    format_status [name: 'ix_usb_drives_format_status']
    mount_path [name: 'ix_usb_drives_mount_path']
    (current_state, current_project_id) [name: 'ix_usb_drives_state_project']
  }
}

Table audit_logs {
  id int [pk, not null]
  timestamp timestamptz
  user varchar
  action varchar [not null]
  project_id varchar
  drive_id int
  job_id int
  details json
  client_ip varchar(45)

  indexes {
    (action, drive_id, project_id, timestamp, id) [name: 'ix_audit_logs_action_drive_project_timestamp_id']
    (drive_id, timestamp, id) [name: 'ix_audit_logs_drive_timestamp_id']
    (job_id, timestamp, id) [name: 'ix_audit_logs_job_timestamp_id']
    (project_id, timestamp, id) [name: 'ix_audit_logs_project_timestamp_id']
    (timestamp, id) [name: 'ix_audit_logs_timestamp_id']
  }
}

Table drive_assignments {
  id int [pk, not null]
  drive_id int [not null]
  job_id int [not null]
  file_count int [not null, default: 0]
  copied_bytes bigint [not null, default: 0]
  assigned_at timestamptz
  activated_at timestamptz
  released_at timestamptz

  indexes {
    (drive_id, released_at, assigned_at, id) [name: 'ix_drive_assignments_drive_released_assigned_id']
    (job_id, released_at, assigned_at, id) [name: 'ix_drive_assignments_job_released_assigned_id']
  }
}

Table export_files {
  id int [pk, not null]
  job_id int [not null]
  drive_assignment_id int
  project_id varchar [not null]
  relative_path varchar [not null]
  size_bytes bigint
  checksum varchar
  status file_status [default: 'PENDING']
  error_message text
  retry_attempts int [default: 0]
  startup_analysis_revision int [not null, default: 0]

  indexes {
    drive_assignment_id [name: 'ix_export_files_drive_assignment_id']
    job_id [name: 'ix_export_files_job_id']
    (job_id, id) [name: 'ix_export_files_job_id_id']
    (job_id, status) [name: 'ix_export_files_job_status']
    project_id [name: 'ix_export_files_project_id']
    (project_id, status) [name: 'ix_export_files_project_status']
  }
}

Table manifests {
  id int [pk, not null]
  job_id int [not null]
  drive_assignment_id int
  manifest_path varchar
  format varchar [default: 'JSON']
  created_at timestamptz

  indexes {
    drive_assignment_id [name: 'ix_manifests_drive_assignment_id']
    (job_id, created_at, id) [name: 'ix_manifests_job_created_id']
  }
}

Ref: audit_logs.drive_id > usb_drives.id
Ref: audit_logs.job_id > export_jobs.id
Ref: drive_assignments.drive_id > usb_drives.id
Ref: drive_assignments.job_id > export_jobs.id
Ref: export_files.drive_assignment_id > drive_assignments.id
Ref: export_files.job_id > export_jobs.id
Ref: export_files.project_id > projects.normalized_project_id
Ref: export_jobs.project_id > projects.normalized_project_id
Ref: job_chain_of_custody_snapshots.job_id > export_jobs.id
Ref: manifests.drive_assignment_id > drive_assignments.id
Ref: manifests.job_id > export_jobs.id
Ref: startup_analysis_entries.job_id > export_jobs.id
Ref: usb_drives.port_id > usb_ports.id
Ref: usb_ports.hub_id > usb_hubs.id
